
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int szDrivers ;
typedef int drivers ;
typedef int LPVOID ;
typedef int LPSTR ;
typedef int DWORD ;


 scalar_t__ EnumDeviceDrivers (int *,int,int*) ;
 scalar_t__ GetDeviceDriverBaseName (int ,int ,int) ;
 scalar_t__ strcmp (char*,char*) ;

LPVOID GetBaseAddr(char *drvname) {

 LPVOID drivers[1024];
 DWORD cbNeeded;
 int nDrivers, i = 0;

 if (EnumDeviceDrivers(drivers, sizeof(drivers), &cbNeeded) && cbNeeded < sizeof(drivers)) {

  char szDrivers[1024];
  nDrivers = cbNeeded / sizeof(drivers[0]);
  for (i = 0; i < nDrivers; i++) {
   if (GetDeviceDriverBaseName(drivers[i], (LPSTR)szDrivers, sizeof(szDrivers) / sizeof(szDrivers[0]))) {

    if (strcmp(szDrivers, drvname) == 0) {

     return drivers[i];
    }
   }
  }
 }
 return 0;
}
